# nix-bundle-darwin

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
src/: copy.rs  macho.rs  main.rs  nix.rs  paths.rs
