[package]
name = "nix-bundle-darwin"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2-or-later"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
grep = "0.3.2"
pathdiff = "0.2.3"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
